--- a/src/componentes/PaginaCadastro/styles.css
+++ b/src/componentes/PaginaCadastro/styles.css
@@ -3,7 +3,7 @@
     margin: 0 auto;
 }
 
-.container-login{
+.container-register{
     width: 100%;
     min-height: 100vh;
 
@@ -16,7 +16,7 @@
     background-color: #e1e1e1;
 }
 
-.wrap-login {
+.wrap-register {
     width: 390px;
     background-color: #FFF;
     border-radius: 10px;
@@ -26,11 +26,11 @@
     box-shadow: 0 5px 10px 0px rgba(0,0,0, 0.2);
 }
 
-.login-form {
+.register-form {
     width: 100%;
 }
 
-.login-form-title {
+.register-form-title {
     display: block;
     font-size: 30px;
     color: #5c5c5c;
@@ -124,14 +124,14 @@
     width: 100%;
 }
 
-.container-login-form-btn {
+.container-register-form-btn {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     padding-bottom: 13px;
 }
 
-.login-form-btn {
+.register-form-btn {
     font-size: 15px;
     border: none;
     border-radius: 10px;
@@ -150,7 +150,7 @@
     background: -webkit-linear-gradient(to left, #19187e, #d6341e);
 }
 
-.login-form-btn {
+.register-form-btn {
     cursor: pointer;
 }
 
@@ -174,16 +174,6 @@
     color: #6a7dfe;
     line-height: 1.5;
     text-decoration: none;
-}
-
-.txt3{
-    position: absolute;
-    font-size: 14px;
-    color: #6a7dfe;
-    line-height: 1.5;
-    text-decoration: none;
-    padding-left: 47px;
-    margin-top: 80px;
 }
 
 .logo{
