--- a/src/componentes/PaginaCadastro/styles.css
+++ b/src/componentes/PaginaCadastro/styles.css
@@ -47,7 +47,7 @@
 
 .input {
     font-size: 15px;
-    color: #FFF;
+    color: #000000;
     line-height: 1.2;
     border: none;
     display: block;
