--- a/src/componentes/LoginNovo/styles.css
+++ b/src/componentes/LoginNovo/styles.css
@@ -5,7 +5,7 @@
 
 .container-login{
     width: 100%;
-    min-height: 100vh;
+    min-height: 92vh;
 
     display: flex;
     flex-wrap: wrap;
@@ -13,7 +13,7 @@
     justify-content: center;
     padding: 15px;
 
-    background-color: #e1e1e1;
+    background-color: transparent;
 }
 
 .wrap-login {
@@ -47,7 +47,7 @@
 
 .input {
     font-size: 15px;
-    color: #FFF;
+    color: #000;
     line-height: 1.2;
     border: none;
     display: block;
